--- a/Contact.html
+++ b/Contact.html
@@ -12,13 +12,13 @@
     </ul>
     <hr>
 
-    <form class="" action="index.html" method="post">
+    <form action="mailto:ekdrbf37@naver.com" method="post" enctype="text/plain">
       <label for="">Your Name : </label>
-      <input type="text" name="" value=""><br>
+      <input type="text" name="yourText" value=""><br>
       <label for="">Your Email : </label>
-      <input type="email" name="" value=""><br>
+      <input type="email" name="yourEmail" value=""><br>
       <label for="">Your Message</label><br>
-      <textarea name="name" rows="8" cols="80"></textarea>
+      <textarea name="yourMessage" rows="8" cols="80"></textarea>
 
     </form>
   </body>
