--- a/Contact.html
+++ b/Contact.html
@@ -19,6 +19,8 @@
       <input type="email" name="yourEmail" value=""><br>
       <label for="">Your Message</label><br>
       <textarea name="yourMessage" rows="8" cols="80"></textarea>
+      
+      <input type="submit" name="">
 
     </form>
   </body>
